--- a/sentiment_cnn_tf.ipynb
+++ b/sentiment_cnn_tf.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,11 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 (?, 1, 1, 128) (?, 128)\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -252,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -275,11 +283,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Parameters:\n",
+      "ALLOW_SOFT_PLACEMENT = True\n",
+      "BATCH_SIZE = 128\n",
+      "CHECKPOINT_EVERY = 100\n",
+      "EMBEDDING_DIM = 128\n",
+      "EVALUATE_EVERY = 100\n",
+      "FILTER_SIZES = 3,4,5\n",
+      "KEEP_PROB = 0.5\n",
+      "L2_REG_LAMBDA = 0.0\n",
+      "LOG_DEVICE_PLACEMENT = False\n",
+      "NEG_LINK = https://raw.githubusercontent.com/yoonkim/CNN_sentence/master/rt-polarity.neg\n",
+      "NUM_CHECKPOINTS = 5\n",
+      "NUM_EPOCHS = 5\n",
+      "NUM_FILTERS = 128\n",
+      "NUM_FOLDS = 2\n",
+      "POS_LINK = https://raw.githubusercontent.com/yoonkim/CNN_sentence/master/rt-polarity.pos\n",
+      "TEST_SAMPLE_PERCENTAGE = 0.1\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Data loading params\n",
@@ -322,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,11 +366,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary Size:  18759\n",
+      "(10662, 266) [[    1     2     3 ...,     0     0     0]\n",
+      " [    1    31    32 ...,     0     0     0]\n",
+      " [   57    58    59 ...,     0     0     0]\n",
+      " ..., \n",
+      " [   75    84  1949 ...,     0     0     0]\n",
+      " [    1  2191  2690 ...,     0     0     0]\n",
+      " [11512     3   147 ...,     0     0     0]]\n",
+      "[ 7359  5573 10180 ...,  1344  7293  1289]\n",
+      "Train/Test split: 9595/1067\n"
+     ]
+    }
+   ],
    "source": [
     "# Build vocabulary\n",
     "max_document_length = max([len(x) for x in x_text])\n",
@@ -586,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
